# metacritic-score

./: .dir-locals.el  .projectile  .travis.yml  Dockerfile  LICENSE  README.md  metacritic-score.cabal
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: Core.hs  Server.hs  Types.hs
test/: Spec.hs  okamiSample.html
